# AgnoRAG

./: .gitignore  README.md  cursor_history.md  generic_pagination_service.go  main.py  pagination_service.go  pyproject.toml  refactored_controller.go
.cursor/rules/: 000-agno-rag-system.mdc  200-dependency-management.mdc
config/: settings.py
docs/: design.md  requirements.md
src/: rag_system.py
src/agents/: __init__.py  answer_agent.py  base_agent.py  context_agent.py  graph_agent.py  query_agent.py  reasoning_agent.py  search_agent.py
src/services/: __init__.py  base.py  graph_service.py  llm_service.py  vector_service.py
tests/: test_rag_system.py
